@@ -62,6 +62,14 @@
                                 :check-redefinition-p nil)
        ,(funcall *original-defimplementation* whole env))))
 
+;;; UTF8
+
+(defimplementation string-to-utf8 (string)
+  (ef:encode-lisp-string string :utf-8))
+
+(defimplementation utf8-to-string (octets)
+  (ef:decode-external-string octets :utf-8))
+
 ;;; TCP server
 
 (defimplementation preferred-communication-style ()
